--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
+    "@types/node": "^18.15.11",
     "sass": "^1.61.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
