repeat attempt at resolving netlify issue

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^4.2.0"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "js-type-text": "^2.0.6"
   }
