--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "portfolio-website",
-  "private": true,
-  "version": "0.0.0",
+  "name": "",
   "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@types/aos": "^3.0.4",
-    "@types/node": "^18.15.11",
-    "sass": "^1.61.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "aos": "^3.0.0-beta.6",
-    "bootstrap": "^5.2.3",
-    "js-type-text": "^2.0.6"
+    "@astrojs/check": "^0.3.1",
+    "@astrojs/react": "^3.0.7",
+    "@astrojs/tailwind": "^5.0.3",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "astro": "^4.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0",
+    "prettier-plugin-astro": "^0.12.2"
   }
 }
