--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "astro": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "simple-icons": "^10.1.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.2"
   },
